--- a/package.json
+++ b/package.json
@@ -10,8 +10,39 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/cli": "^12.3.5",
+    "@react-native-firebase/app": "^18.8.0",
+    "@react-native-firebase/auth": "^18.7.3",
+    "@react-native-firebase/database": "^18.8.0",
+    "@react-native-firebase/firestore": "^18.8.0",
+    "@react-navigation/bottom-tabs": "^6.5.11",
+    "@react-navigation/drawer": "^6.6.6",
+    "@react-navigation/material-top-tabs": "^6.6.5",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.17",
+    "@react-navigation/stack": "^6.3.20",
+    "@rneui/base": "^0.0.0-edge.2",
+    "@rneui/themed": "^0.0.0-edge.2",
+    "@tamagui/core": "^1.89.28",
+    "metro": "^0.80.6",
     "react": "18.2.0",
-    "react-native": "0.73.4"
+    "react-native": "0.73.4",
+    "react-native-elements": "^3.4.3",
+    "react-native-gesture-handler": "^2.14.0",
+    "react-native-ico": "^43.7.4",
+    "react-native-ico-dazzle-line": "^5.1.2",
+    "react-native-ico-material-design": "^5.1.2",
+    "react-native-image-picker": "^7.1.0",
+    "react-native-onboarding-swiper": "^1.2.0",
+    "react-native-pager-view": "^6.2.3",
+    "react-native-paper": "^5.11.7",
+    "react-native-reanimated": "^3.6.2",
+    "react-native-safe-area-context": "^4.8.2",
+    "react-native-screens": "^3.29.0",
+    "react-native-snap-carousel": "^1.3.1",
+    "react-native-tab-view": "^3.5.2",
+    "react-native-uuid": "^2.0.1",
+    "react-native-vector-icons": "^10.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
