--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-native-reanimated": "^3.6.2",
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "^3.29.0",
+    "react-native-select-dropdown": "^3.4.0",
     "react-native-snap-carousel": "^1.3.1",
     "react-native-tab-view": "^3.5.2",
     "react-native-uuid": "^2.0.1",
