--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.22.0",
+    "@react-native-community/blur": "^4.4.0",
     "@react-native-community/cli": "^12.3.5",
     "@react-native-firebase/app": "^18.8.0",
     "@react-native-firebase/auth": "^18.7.3",
